[gd_scene load_steps=9 format=3 uid="uid://byc80n683e4wf"]

[ext_resource type="Script" path="res://Game.gd" id="1_jv7w1"]
[ext_resource type="Shader" path="res://sprit_screen.gdshader" id="2_0ji7x"]
[ext_resource type="PackedScene" uid="uid://ce6eyys6v2osx" path="res://world/ï¼·orld.tscn" id="2_wbtyu"]

[sub_resource type="Gradient" id="Gradient_lc25a"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a63pj"]
gradient = SubResource("Gradient_lc25a")
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fiuoa"]
shader = ExtResource("2_0ji7x")
shader_parameter/is_split = null
shader_parameter/to = null
shader_parameter/split_line_tickness = null

[sub_resource type="CanvasTexture" id="CanvasTexture_wjxbk"]

[sub_resource type="ViewportTexture" id="ViewportTexture_t5vru"]
viewport_path = NodePath("Viewports/SubViewport3")

[node name="Game" type="Node"]
script = ExtResource("1_jv7w1")

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_a63pj")

[node name="Viewports" type="Node" parent="."]

[node name="SubViewport1" type="SubViewport" parent="Viewports"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)

[node name="World" parent="Viewports/SubViewport1" instance=ExtResource("2_wbtyu")]
unique_name_in_owner = true

[node name="SubViewport2" type="SubViewport" parent="Viewports"]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)

[node name="Camera2" type="Camera2D" parent="Viewports/SubViewport2"]
unique_name_in_owner = true

[node name="SubViewport3" type="SubViewport" parent="Viewports"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1152, 648)

[node name="Camera3" type="Camera2D" parent="Viewports/SubViewport3"]
unique_name_in_owner = true

[node name="game" type="CanvasLayer" parent="."]
layer = 0

[node name="View" type="TextureRect" parent="game"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fiuoa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_wjxbk")
expand_mode = 1

[node name="DebugSubViewport" type="TextureRect" parent="game"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
texture = SubResource("ViewportTexture_t5vru")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.045
anchor_top = 0.045
anchor_right = 0.045
anchor_bottom = 0.045
offset_right = 91.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.235294, 0.419608, 0.466667, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 24
text = "Try split screen !!"
